--- a/views/stdList.ejs
+++ b/views/stdList.ejs
@@ -15,7 +15,7 @@
 
           <div class="table-responsive">
         
-              <table class="table bg-light shadow border-bottom mt-3">
+              <table class="table bg-light shadow-sm border-bottom mt-3">
                
                 <tbody>
                   
@@ -37,27 +37,27 @@
       
           </div>
           
-          <p class="lead text-secondary fw-bold"><%= viewTitle %></p>
+          <p class="lead text-primary fw-bold"><%= viewTitle %></p>
 
 <div class="table-responsive">
   
-<table class="table border bg-white shadow">
+<table class="table table-striped border bg-white shadow-sm">
   
-  <thead class="bg-secondary">
+  <thead class="bg-light">
     
     <tr>
       
-      <th scope="col" class="ps-3 fw-bold text-white" style="width: 85px">Regn.</th>
+      <th scope="col" class="ps-3 fw-bold" style="width: 85px">Regn.</th>
       
-      <th scope="col" class="fw-bold text-white">Name of Student</th>
+      <th scope="col" class="fw-bold ">Name of Student</th>
       
-      <th scope="col" class="fw-bold text-white">Father's Name</th>
+      <th scope="col" class="fw-bold ">Father's Name</th>
       
-      <th scope="col" class="fw-bold text-white">Address</th>
+      <th scope="col" class="fw-bold ">Address</th>
       
-      <th scope="col" class="fw-bold text-white">Phone No</th>
+      <th scope="col" class="fw-bold ">Phone No</th>
       
-      <th scope="col" class="fw-bold text-white">Action</th>
+      <th scope="col" class="fw-bold ">Action</th>
       
     </tr>
     
