--- a/views/todayFeeReview.ejs
+++ b/views/todayFeeReview.ejs
@@ -15,7 +15,7 @@
     
     <div class="table-responsive">
         
-              <table class="table bg-light shadow mt-3">
+              <table class="table bg-light shadow-sm mt-3">
                
                 <tbody>
                   
@@ -46,29 +46,29 @@
         
               <div class="table-responsive">
         
-              <table class="table border bg-white border-start border-end shadow">
+              <table class="table border bg-white border-start border-end shadow-sm">
                 
                    <tbody>
                      
                     <tr class="text-center">
                         
-                      <th class="p-3 fw-bold text-success lead" colspan="6"> Monthly Fee</th>
+                      <th class="fw-bold text-primary lead" colspan="6"> Monthly Fee</th>
                       
                     </tr>
                     
-                    <tr class="bg-secondary">
+                    <tr class="bg-light">
                       
-                      <td class="fw-bold text-white border align-middle small"> Regn.</td>
+                      <td class="fw-bold  border align-middle small"> Regn.</td>
                       
-                      <td class="fw-bold text-white border align-middle small"> Student's Name</td>
+                      <td class="fw-bold  border align-middle small"> Student's Name</td>
                       
-                      <td class="fw-bold text-white border align-middle small"> Father's Name </td>
+                      <td class="fw-bold  border align-middle small"> Father's Name </td>
                       
-                      <td class="fw-bold text-white border align-middle small"> Narration </td>
+                      <td class="fw-bold  border align-middle small"> Narration </td>
       
-                      <td class="fw-bold text-white border align-middle small"> Amount </td>
+                      <td class="fw-bold  border align-middle small"> Amount </td>
                       
-                      <td class="fw-bold text-white border align-middle small"> Entered By </td>
+                      <td class="fw-bold  border align-middle small"> Entered By </td>
       
                     </tr>
               <% 
@@ -124,36 +124,36 @@
             
             </ul> <!--today fee review table end-->
             
-            
+            <hr class="text-success  w-25 mx-auto mb-4">
             <!--Today exam fee review table started-->
    
            <ul class="list-group"> 
         
               <div class="table-responsive">
         
-              <table class="table border bg-white border-start border-end shadow">
+              <table class="table border bg-white border-start border-end shadow-sm">
                 
                    <tbody>
                      
                     <tr class="text-center">
                         
-                      <th class="p-3 fw-bold text-success lead" colspan="6"> Exam Fee</th>
+                      <th class="fw-bold text-primary lead" colspan="6"> Exam Fee</th>
                       
                     </tr>
                     
-                    <tr class="bg-secondary">
+                    <tr class="bg-light">
                       
-                      <td class="fw-bold text-white border align-middle small"> Regn.</td>
+                      <td class="fw-bold  border align-middle small"> Regn.</td>
                       
-                      <td class="fw-bold text-white border align-middle small"> Student's Name</td>
+                      <td class="fw-bold  border align-middle small"> Student's Name</td>
                       
-                      <td class="fw-bold text-white border align-middle small"> Father's Name </td>
+                      <td class="fw-bold  border align-middle small"> Father's Name </td>
                       
-                      <td class="fw-bold text-white border align-middle small"> Narration </td>
+                      <td class="fw-bold  border align-middle small"> Narration </td>
       
-                      <td class="fw-bold text-white border align-middle small"> Amount </td>
+                      <td class="fw-bold  border align-middle small"> Amount </td>
                       
-                      <td class="fw-bold text-white border align-middle small"> Entered By </td>
+                      <td class="fw-bold  border align-middle small"> Entered By </td>
       
                     </tr>
               <% 
@@ -214,7 +214,7 @@
             
             </ul> <!--today exam fee review table end-->
             
-            
+            <hr class="text-success w-25 mx-auto mb-4">
             
             <!--Today other fee review table started-->
    
@@ -222,29 +222,29 @@
         
               <div class="table-responsive">
         
-              <table class="table border bg-white border-start border-end shadow">
+              <table class="table border bg-white border-start border-end shadow-sm">
                 
                    <tbody>
                      
                     <tr class="text-center">
                         
-                      <th class="p-3 fw-bold text-success lead" colspan="6"> Other Fee</th>
+                      <th class="fw-bold text-primary lead" colspan="6"> Other Fee</th>
                       
                     </tr>
                     
-                    <tr class="bg-secondary">
+                    <tr class="bg-light">
                       
-                      <td class="fw-bold text-white border align-middle small"> Regn.</td>
+                      <td class="fw-bold  border align-middle small"> Regn.</td>
                       
-                      <td class="fw-bold text-white border align-middle small"> Student's Name</td>
+                      <td class="fw-bold  border align-middle small"> Student's Name</td>
                       
-                      <td class="fw-bold text-white border align-middle small"> Father's Name </td>
+                      <td class="fw-bold  border align-middle small"> Father's Name </td>
                       
-                      <td class="fw-bold text-white border align-middle small"> Narration </td>
+                      <td class="fw-bold  border align-middle small"> Narration </td>
       
-                      <td class="fw-bold text-white border align-middle small"> Amount </td>
+                      <td class="fw-bold  border align-middle small"> Amount </td>
                       
-                      <td class="fw-bold text-white border align-middle small"> Entered By </td>
+                      <td class="fw-bold  border align-middle small"> Entered By </td>
       
                     </tr>
               <% 
