--- a/views/viewExamFeeReceived.ejs
+++ b/views/viewExamFeeReceived.ejs
@@ -15,7 +15,7 @@
     
       <div class="table-responsive">
         
-              <table class="table bg-light shadow mt-3">
+              <table class="table bg-light shadow-sm mt-3">
                
                 <tbody>
                   
@@ -46,31 +46,31 @@
         
               <div class="table-responsive">
         
-              <table class="table bg-white border shadow">
+              <table class="table bg-white border shadow-sm">
                 
                    <tbody>
                      
                     <tr class="text-center">
                         
-                      <th class="p-3 text-success fw-bold lead" colspan="7"> All Exam Fee Statement</th>
+                      <th class="text-primary fw-bold lead" colspan="7"> All Exam Fee Statement</th>
                       
                     </tr>
                     
-                    <tr class="bg-secondary">
+                    <tr class="bg-light">
                       
-                      <td class="fw-bold text-white border align-middle"> Sl. Nos</td>
+                      <td class="fw-bold  border align-middle"> Sl. Nos</td>
                       
-                      <td class="fw-bold text-white border align-middle"> Regn. </td>
+                      <td class="fw-bold  border align-middle"> Regn. </td>
                       
-                      <td class="fw-bold text-white border align-middle"> Student Name</td>
+                      <td class="fw-bold  border align-middle"> Student Name</td>
                       
-                      <td class="fw-bold text-white border align-middle"> Narration </td>
+                      <td class="fw-bold  border align-middle"> Narration </td>
       
-                      <td class="fw-bold text-white border align-middle"> Amount </td>
+                      <td class="fw-bold  border align-middle"> Amount </td>
                       
-                      <td class="fw-bold text-white border align-middle"> Date of Payment </td>
+                      <td class="fw-bold  border align-middle"> Date of Payment </td>
                       
-                      <td class="fw-bold text-white border align-middle"> Entered By </td>
+                      <td class="fw-bold  border align-middle"> Entered By </td>
       
                     </tr>
                     
