--- a/views/viewFee.ejs
+++ b/views/viewFee.ejs
@@ -15,7 +15,7 @@
     
     <div class="table-responsive">
         
-              <table class="table bg-light shadow mt-3">
+              <table class="table bg-light shadow-sm mt-3">
                
                 <tbody>
                   
@@ -36,19 +36,16 @@
           </div>
   
 
-    <div class="text-center mt-4">
-      
-       
+    <div class="text-center mt-2">
         
          <p class="lead text-secondary fw-normal"><%= viewTitle %></p>
 
-
-    
     </div>
+    
     
     <div class="d-flex justify-content-center">
         
-        <ul class="list-group shadow">
+        <ul class="list-group shadow-sm">
             
               <li class="list-group-item text-dark fw-bold" aria-current="true"> Categories</li>
               
