--- a/views/viewFeeByDate.ejs
+++ b/views/viewFeeByDate.ejs
@@ -15,7 +15,7 @@
     
       <div class="table-responsive">
         
-              <table class="table bg-light shadow mt-3">
+              <table class="table bg-light shadow-sm mt-3">
                
                 <tbody>
                   
@@ -34,7 +34,7 @@
           </div>
   
 
-    <div class="text-center mt-4">
+    <div class="text-center mt-2">
       
         
          <p class="text-secondary fw-normal"><%= viewTitle %> : <span class="text-danger"><%= convertDate(searchDate) %> </span></p>
@@ -49,29 +49,29 @@
         
               <div class="table-responsive">
         
-              <table class="table border bg-white border-start border-end shadow">
+              <table class="table border bg-white border-start border-end shadow-sm">
                 
                    <tbody>
                      
                     <tr class="text-center">
                         
-                      <th class="p-3 fw-bold text-success lead" colspan="6"> Monthly Fee Statement</th>
+                      <th class="fw-bold text-primary lead" colspan="6"> Monthly Fee Statement</th>
                       
                     </tr>
                     
-                    <tr class="bg-secondary">
+                    <tr class="bg-light">
                       
-                      <td class="fw-bold text-white border align-middle"> Regn.</td>
+                      <td class="fw-bold  border align-middle"> Regn.</td>
                       
-                      <td class="fw-bold text-white border align-middle"> Student's Name</td>
+                      <td class="fw-bold  border align-middle"> Student's Name</td>
                       
-                      <td class="fw-bold text-white border align-middle"> Father's Name </td>
+                      <td class="fw-bold  border align-middle"> Father's Name </td>
                       
-                      <td class="fw-bold text-white border align-middle"> Narration </td>
+                      <td class="fw-bold  border align-middle"> Narration </td>
       
-                      <td class="fw-bold text-white border align-middle"> Amount </td>
+                      <td class="fw-bold  border align-middle"> Amount </td>
                       
-                      <td class="fw-bold text-white border align-middle"> Entered By </td>
+                      <td class="fw-bold  border align-middle"> Entered By </td>
       
                     </tr>
               <% 
@@ -128,7 +128,8 @@
             
             </ul> <!--today fee review table end-->
             
-            
+             <hr class="text-success w-25 mx-auto mb-4">
+             
             <!--Today exam fee review table started-->
    
            <ul class="list-group"> 
@@ -141,23 +142,23 @@
                      
                     <tr class="text-center">
                         
-                      <th class="p-3 fw-bold text-success lead" colspan="6"> Exam Fee Statement </th>
+                      <th class="p-3 fw-bold text-primary lead" colspan="6"> Exam Fee Statement </th>
                       
                     </tr>
                     
-                    <tr class="bg-secondary">
+                    <tr class="bg-light">
                       
-                      <td class="fw-bold text-white border align-middle"> Regn.</td>
+                      <td class="fw-bold  border align-middle"> Regn.</td>
                       
-                      <td class="fw-bold text-white border align-middle"> Student's Name</td>
+                      <td class="fw-bold  border align-middle"> Student's Name</td>
                       
-                      <td class="fw-bold text-white border align-middle"> Father's Name </td>
+                      <td class="fw-bold  border align-middle"> Father's Name </td>
                       
-                      <td class="fw-bold text-white border align-middle"> Narration </td>
+                      <td class="fw-bold  border align-middle"> Narration </td>
       
-                      <td class="fw-bold text-white border align-middle"> Amount </td>
+                      <td class="fw-bold  border align-middle"> Amount </td>
                       
-                      <td class="fw-bold text-white border align-middle"> Entered By </td>
+                      <td class="fw-bold  border align-middle"> Entered By </td>
       
                     </tr>
               <% 
@@ -219,7 +220,7 @@
             
             </ul> <!--today exam fee review table end-->
             
-            
+            <hr class="text-success w-25 mx-auto mb-4">
             
             <!--Today other fee review table started-->
    
@@ -233,23 +234,23 @@
                      
                     <tr class="text-center">
                         
-                      <th class="p-3 fw-bold text-success lead" colspan="6"> Any Other Statement</th>
+                      <th class="fw-bold text-primary lead" colspan="6"> Any Other Statement</th>
                       
                     </tr>
                     
-                    <tr class="bg-secondary">
+                    <tr class="bg-light">
                       
-                      <td class="fw-bold text-white border align-middle"> Regn.</td>
+                      <td class="fw-bold  border align-middle"> Regn.</td>
                       
-                      <td class="fw-bold text-white border align-middle"> Student's Name</td>
+                      <td class="fw-bold  border align-middle"> Student's Name</td>
                       
-                      <td class="fw-bold text-white border align-middle"> Father's Name </td>
+                      <td class="fw-bold  border align-middle"> Father's Name </td>
                       
-                      <td class="fw-bold text-white border align-middle"> Narration </td>
+                      <td class="fw-bold  border align-middle"> Narration </td>
       
-                      <td class="fw-bold text-white border align-middle"> Amount </td>
+                      <td class="fw-bold  border align-middle"> Amount </td>
                       
-                      <td class="fw-bold text-white border align-middle"> Entered By </td>
+                      <td class="fw-bold  border align-middle"> Entered By </td>
       
                     </tr>
               <% 
