--- a/views/stdDashboard.ejs
+++ b/views/stdDashboard.ejs
@@ -19,42 +19,11 @@
 
     <main class="ms-sm-auto px-md-4">
       
-      <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-        
-        <h3 class="text-info">Welcome, <%= username %></h3>
-        
-        
-       
-        
-        
-        <div class="btn-toolbar mb-2 mb-md-0">
-          
-          <div class="btn-group me-2">
-            
-            <a href="computer/<%= studentId %>"><button type="button" class="btn btn-sm btn-outline-secondary"> Profile & Fee</button></a>
-            
-    
-            
-          </div>
-          
-          <a href="dcatheorywelcomepage" ><button type="button" class="btn btn-sm btn-outline-secondary dropdown-toggle">
-            
-            <span data-feather="calendar"></span>
-            
-            Lesson 
-            
-          </button> </a>
-          
-        </div>
-        
-        
-   
-        
-        
-        
-      </div>
+      <%- include('layouts/studentMenu') -%>
+      
+      <!--second lane-->
 
-      <h4 class="mt-4 mb-3 text-success">Status of Your Assignment</h4>
+      <h5 class="mt-3 mb-3 text-primary">Status of Your Assignment</h5>
       
       <div class="table-responsive">
         
@@ -64,15 +33,15 @@
             
             <tr>
               
-              <th>#</th>
+              <th>Sl</th>
               
-              <th>Header</th>
+              <th>Subject</th>
               
-              <th>Header</th>
+              <th>Chapter</th>
               
-              <th>Header</th>
+              <th>Score</th>
               
-              <th>Header</th>
+              <th>Date</th>
               
             </tr>
             
