--- a/views/studentPage.ejs
+++ b/views/studentPage.ejs
@@ -25,6 +25,8 @@
         <% } %>
         
         <% if ( loginIdName == 'computerStudent') { %>
+        
+        <%- include('layouts/studentMenu') -%>
       
         <div class="text-center">
           
@@ -62,7 +64,7 @@
                
                <div class="table-responsive">
                  
-               <table class="table bg-white studentTable shadow">
+               <table class="table bg-white studentTable shadow-sm">
                   
                   <tbody>
                       
@@ -132,7 +134,7 @@
               
               <div class="table-responsive ">
 
-                 <table class="table border bg-white shadow">
+                 <table class="table border bg-white shadow-sm">
                   
                   <tbody>
                       
@@ -198,41 +200,37 @@
         
               <div class="table-responsive">
         
-              <table class="table bg-white border-start border-end border-bottom shadow">
+              <table class="table bg-white border-start border-end border-bottom shadow-sm">
                 
                    <tbody>
                      
-                    <tr class="text-center">
-                        
-                      <th class="fw-bold text-success border-bottom-0" colspan="7"> Course Fee / Monthly Fee Statement</th>
-                      
-                    </tr>
+                    
                     
                     <tr>
                       
-                        <td colspan="5" class="border-top-0"></td>
+                        <td colspan="5" class="fw-bold text-primary border-bottom-0 text-center">Course Fee / Monthly Fee Statement</td>
                         
-                        <td colspan="2" class="fw-bold text-white bg-secondary border  text-center align-middle small"> Course Fee (Rs. 9,000/-) </td>
+                        <td colspan="2" class="fw-bold  bg-light border  text-center align-middle small"> Course Fee (Rs. 9,000/-) </td>
                         
                       
                     </tr>
                     
-                    <tr class="bg-secondary">
+                    <tr class="bg-light">
                       
                       
-                      <td  class="fw-bold text-white border align-middle small"> Sl. Nos</td>
+                      <td  class="fw-bold  border align-middle small"> Sl. Nos</td>
                       
-                      <td class="fw-bold text-white border align-middle small"> Narration </td>
+                      <td class="fw-bold  border align-middle small"> Narration </td>
                       
-                      <td class="fw-bold text-white border align-middle small"> Amount </td>
+                      <td class="fw-bold  border align-middle small"> Amount </td>
                       
-                      <td  class="fw-bold text-white border align-middle small"> Date of Payment </td>
+                      <td  class="fw-bold  border align-middle small"> Date of Payment </td>
                       
-                      <td  class="fw-bold text-white border align-middle small"> Entered By </td>
+                      <td  class="fw-bold  border align-middle small"> Entered By </td>
                       
-                      <td class="fw-bold text-white border small">Total Paid</td>
+                      <td class="fw-bold  border small">Total Paid</td>
                         
-                        <td class="fw-bold text-white border small">Balance</td>
+                        <td class="fw-bold  border small">Balance</td>
  
                       </tr>
             
@@ -270,7 +268,7 @@
                             
                           <!--add monthly fee button-->   
                       
-                              <a class="text-dark shadow p-2 rounded" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Enter Fee" href="/computer/<%= students._id %>/feeRegister">
+                              <a class="text-dark shadow-sm p-2 rounded" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Enter Fee" href="/computer/<%= students._id %>/feeRegister">
                                 
                                   <i class="fas fa-edit text-danger fw-bold">
                                     
@@ -293,7 +291,8 @@
             
             </ul> <!--monthly fee table end-->
             
-            
+            <hr class="text-success w-25 mx-auto mb-4">
+        
             
             <!--Exam fee table started-->
                     
@@ -301,41 +300,37 @@
               
               <div class="table-responsive ">
 
-               <table class="table border table-responsive bg-white  shadow">
+               <table class="table border table-responsive bg-white shadow-sm">
                 
                    <tbody>
                      
-                    <tr class="text-center">
-                        
-                      <th class="fw-bold text-success border-bottom-0" colspan="7"> Exam Fee Statement</th>
-                      
-                    </tr>
+                   
                     
                     <tr>
                       
-                        <td colspan="5" class="border-top-0"></td>
+                        <td colspan="5" class="fw-bold text-primary border-bottom-0 text-center"> Exam Fee Statement</td>
                         
-                        <td colspan="2" class="fw-bold text-white bg-secondary border text-center align-middle small"> Exam Fee (Rs. 1,510/-) </td>
+                        <td colspan="2" class="fw-bold  bg-light border text-center align-middle small"> Exam Fee (Rs. 1,510/-) </td>
                         
                       
                     </tr>
                     
-                    <tr class="bg-secondary">
+                    <tr class="bg-light">
                       
                       
-                      <td  class="fw-bold text-white border align-middle small"> Sl. Nos</td>
+                      <td  class="fw-bold  border align-middle small"> Sl. Nos</td>
                       
-                      <td class="fw-bold text-white border align-middle small"> Narration </td>
+                      <td class="fw-bold  border align-middle small"> Narration </td>
                       
-                      <td class="fw-bold text-white border align-middle small"> Amount </td>
+                      <td class="fw-bold  border align-middle small"> Amount </td>
                       
-                      <td  class="fw-bold text-white border align-middle small"> Date of Payment </td>
+                      <td  class="fw-bold  border align-middle small"> Date of Payment </td>
                       
-                      <td  class="fw-bold text-white border align-middle small"> Entered By </td>
+                      <td  class="fw-bold  border align-middle small"> Entered By </td>
                       
-                      <td class="fw-bold text-white border small">Total Paid</td>
+                      <td class="fw-bold  border small">Total Paid</td>
                         
-                        <td class="fw-bold text-white border small">Balance</td>
+                        <td class="fw-bold  border small">Balance</td>
  
                       </tr>
               
@@ -375,7 +370,7 @@
                             
                           <!--add exam fee button-->   
                       
-                              <a class="text-dark shadow p-2 rounded" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Enter Fee" href="/computer/<%= students._id %>/examFeeRegister">
+                              <a class="text-dark shadow-sm p-2 rounded" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Enter Fee" href="/computer/<%= students._id %>/examFeeRegister">
                                 
                                   <i class="fas fa-edit text-danger fw-bold">
                                     
@@ -400,35 +395,37 @@
             
             </ul> <!--Exam fee table end-->
             
+            <hr class="text-success w-25 mx-auto mb-4">
+            
             <!--other fee table started-->
                     
             <ul class="list-group">
               
               <div class="table-responsive">
 
-               <table class="table border table-responsive bg-white  shadow">
+               <table class="table border table-responsive bg-white shadow-sm">
                 
                    <tbody>
                      
-                    <tr class="text-center">
+                    <tr>
                         
-                      <th class="fw-bold text-success" colspan="6"> Any Other Fee </span></th>
+                      <td colspan="6" class="fw-bold text-primary border-bottom-0 text-center"> Any other fee</td>
                       
                     </tr>
                     
-                    <tr class="bg-secondary">
+                    <tr class="bg-light">
                       
-                      <td class="fw-bold text-white border align-middle small" class="ps-3" style="width: 85px"> Sl. Nos</td>
+                      <td class="fw-bold  border align-middle small" class="ps-3" style="width: 85px"> Sl. Nos</td>
                       
-                      <td  class="fw-bold text-white border align-middle small"> Narration </td>
+                      <td  class="fw-bold  border align-middle small"> Narration </td>
       
-                      <td class="fw-bold text-white border align-middle small"> Amount </td>
+                      <td class="fw-bold  border align-middle small"> Amount </td>
                       
-                      <td  class="fw-bold text-white border align-middle small"> Date of Payment </td>
+                      <td  class="fw-bold  border align-middle small"> Date of Payment </td>
                       
-                      <td  class="fw-bold text-white border align-middle small"> Entered By </td>
+                      <td  class="fw-bold  border align-middle small"> Entered By </td>
                       
-                       <td class="fw-bold text-white text-center align-middle small"> Remarks </td>
+                       <td class="fw-bold border text-center align-middle small"> Remarks </td>
                       
                     </tr>
                     
@@ -471,7 +468,7 @@
                             
                           <!--add other fee button-->   
                       
-                              <a class="text-dark shadow p-2 rounded" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Enter Fee" href="/computer/<%= students._id %>/otherFeeRegister">
+                              <a class="text-dark shadow-sm p-2 rounded" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Enter Fee" href="/computer/<%= students._id %>/otherFeeRegister">
                                 
                                   <i class="fas fa-edit text-danger fw-bold shadow">
                                     
